# disfluency_gen

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  requirements.txt  run_in_docker.sh  run_tests.sh  setup.cfg
docs/tutorials/: nmt_with_attention.ipynb
notebooks/: train_and_test.ipynb
notebooks/tutorials/: nmt_with_attention.ipynb
resources/: README.md  sampa.tsv
src/disfluency_generator/: bahdanauAttention.py  data_preparation.py  decoder.py  encoder.py  letsread_prepare_translations.py  machine_translator.py  maskedLoss.py  portuguese_phoneme_to_grapheme.py  shapeChecker.py  trainTranslator.py  train_model.py  translator.py
test/: test_data_preparation.py  test_letsread_prepare_translations.py  test_portuguese_phoneme_to_grapheme.py
test/resources/: test_sampa.tsv
test/resources/mini_LetsReadDB/TRS/: c018_17_3_cor.trs
