[metadata]
name = disfluency_generator
version = 0.0.1
author = Nicholas Parslow
author_email = nparslow5@gmail.com
description = Package for generating disfluencies with MT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nparslow/disfluency_generator
project_urls =
    Bug Tracker = https://github.com/nparslow/disfluency_generator/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

